# douyin-rec

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  clean.sh  config.example.yaml  docker-compose.yml  esbuild.config.mjs  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  run.sh  setup.sh  tsconfig.json  vitest.config.ts
.superpowers/sdd/: fix-4-report.md  fix-7-report.md
configs/: hub-config.example.json  hub.config.example.json
docs/: app.md  architecture.html  architecture.md  cli.md  dlr-subprocess-rationale.md  docker.md  douyin-kick-investigation.md  ffmpeg_params.md  multi-node-sync-followups.md  multi-node-sync-plan.md  multi-node-sync.md
plans/: 001_schedule_plan.md  002_ollama_backend.md  003_ai_backend_selector.md  005_recording_session_tracking.md  006_danmu_recording.md  007_video_merge.md  008_danmu_fix.md  009_danmu_bililive_comparison.md  010_danmu_xml_format.md  011_danmu_merge_types_config.md  012_danmu_layout_redesign.md  013_dlr_smart_reconnect.md  014_livechat_panel.md  015_multi_node_followups.md
scripts/: bump-version.sh  cleanup-icloud.sh  install-biliup.sh  install-mesio.sh  rename
src/: config.py  display.py  dlr_launcher.py  downloader.py  models.py  recorder.py  screenshot_runner.py  task_manager.py
src/ai/: __init__.py  base.py  claude_backend.py  factory.py  gemini_backend.py  gpt4o_backend.py  ollama_backend.py  qwen_backend.py
src/danmu/: __init__.py  ass_writer.py  chat_panel_writer.py  client.py  douyin_utils.py  live_chat_writer.py  models.py  recorder.py  sign_runner.mjs  ws_utils.py  xml_writer.py
src/dlr/: __init__.py  recorder.py
src/extract/: __init__.py  extractor.py
src/filter/: __init__.py  aesthetic.py  blur.py  face.py  pipeline.py
src/highlight/: __init__.py  audio.py  detector.py
src/input/: __init__.py  douyin_spider.py  live.py  local.py  source.py
src/merge/: merger.py
src/storage/: __init__.py  database.py  manager.py
src/ui/: app.py
test/: session.test.ts  setup.ts
test/app/: cookie-resolution.test.ts  daemon.test.ts  events.test.ts  hub-config-scaffold.test.ts  login-manager.test.ts  merge-jobs.test.ts  qr-login-cookie.test.ts  record-args.test.ts  recorder-process.test.ts  scheduler.test.ts  store.test.ts  (+5 more)
tests/: e2e_recording_test.py  test_config.py  test_dlr_launcher.py  test_extractor.py  test_live.py  test_models.py  test_recorder.py  test_task_manager.py  test_ui_api.py
tools/: merge_recording.py
(+8 files in other folders)
