[project]
name = "video-screenshot"
version = "0.1.0"
description = "视频自动截图系统 - 主播好看照片 & 高能时刻检测"
requires-python = ">=3.11"
dependencies = [
    # 视频
    "opencv-python>=4.8",
    "ffmpeg-python>=0.2",
    "httpx>=0.27",
    # 人脸
    "mediapipe>=0.10",
    "insightface>=0.7",
    "onnxruntime>=1.16",
    # 美学
    "torch>=2.1",
    "open-clip-torch>=2.24",
    "pyiqa>=0.1",
    "transformers>=4.36",
    # 音频
    "librosa>=0.10",
    "openai-whisper>=20231117",
    "soundfile>=0.12",
    # 存储
    "sqlmodel>=0.0.14",
    "Pillow>=10.0",
    # HTTP / WebSocket
    "requests>=2.31",
    "aiohttp>=3.9",
    "protobuf>=4.23",
    # 配置
    "pyyaml>=6.0",
    "jsengine>=1.0.7.post1",
    "gmssl>=3.2.2",
    # DouyinLiveRecorder 依赖 (vendor/DouyinLiveRecorder)
    "loguru>=0.7.3",
    "pycryptodome>=3.20.0",
    "distro>=1.9.0",
    "tqdm>=4.67.1",
    "PyExecJS>=1.5.1",
    "httpx[http2]>=0.28.1",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
gemini = ["google-generativeai"]
openai = ["openai"]
all-ai = ["anthropic>=0.40", "google-generativeai", "openai"]
ui = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
danmu = ["aiohttp>=3.9", "protobuf>=4.23", "jsengine>=0.1"]

[project.scripts]
video-screenshot = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
